--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sapien-dependent-bot",
+  "name": "sapien-dependabot",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -12,34 +12,34 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.2",
+    "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
-    "@hookform/resolvers": "^2.8.3",
+    "@hookform/resolvers": "^2.8.8",
     "@juggle/resize-observer": "^3.3.1",
-    "@lottiefiles/lottie-player": "^1.4.5",
-    "@react-three/fiber": "^7.0.25",
+    "@lottiefiles/lottie-player": "^1.5.5",
+    "@react-three/fiber": "^7.0.26",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "aos": "^2.3.4",
-    "axios": "^0.24.0",
+    "axios": "^0.26.0",
     "glslify": "^7.1.1",
     "imagesloaded": "^4.1.4",
     "js-cookie": "^3.0.1",
-    "locomotive-scroll": "^4.1.3",
+    "locomotive-scroll": "^4.1.4",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
-    "next": "latest",
+    "next": "^12.0.10",
     "next-seo": "^5.1.0",
     "next-themes": "^0.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
-    "react-hook-form": "^7.20.0",
+    "react-hook-form": "^7.27.0",
     "react-locomotive-scroll": "^0.2.0",
     "react-three-fiber": "^6.0.13",
-    "react-use": "^17.3.1",
-    "sass": "^1.49.0",
-    "swr": "^1.0.1",
-    "three": "^0.136.0",
+    "react-use": "^17.3.2",
+    "sass": "^1.49.7",
+    "swr": "^1.2.1",
+    "three": "^0.137.5",
     "video.js": "^7.17.0",
     "yup": "^0.32.11"
   },
@@ -50,29 +50,29 @@
     ]
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@tailwindcss/forms": "^0.4.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest-axe": "^3.5.3",
-    "@types/node": "16.11.6",
-    "@types/react": "17.0.33",
-    "autoprefixer": "^10.4.0",
-    "babel-jest": "^27.3.1",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.2",
+    "@types/node": "17.0.18",
+    "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
+    "babel-jest": "^27.5.1",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
-    "husky": "^7.0.0",
+    "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.3.1",
+    "jest": "^27.5.1",
     "jest-axe": "^5.0.1",
-    "lint-staged": "^11.2.6",
-    "postcss": "^8.4.5",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.4.1",
+    "lint-staged": "^12.3.4",
+    "postcss": "^8.4.6",
+    "postcss-preset-env": "^7.3.3",
+    "prettier": "^2.5.1",
     "react-test-renderer": "^17.0.2",
-    "tailwindcss": "^3.0.7",
-    "typescript": "4.4.4"
+    "tailwindcss": "^3.0.22",
+    "typescript": "4.5.5"
   }
 }
